@@ -13,6 +13,8 @@
   <Action name="delete"/>
   <Action name="mergecell"/>
   <Action name="dissociatecell"/>
+  <Action name="increaseindent"/>
+  <Action name="decreaseindent"/>
   <Separator/>
   <Action name="RecalcWorkSheet"/>
   <Action name="RecalcWorkBook"/>
@@ -179,6 +181,8 @@
  <Action name="borderColor"/>
  <Action name="dissociatecell"/>
  <Action name="mergecell"/>
+ <Action name="increaseindent"/>
+ <Action name="decreaseindent"/>
 </ToolBar>
 <!--
 <InPlaceEditing>
