@@ -312,6 +312,9 @@ KSpreadView::KSpreadView( QWidget *_parent, const char *_name, KSpreadDoc* doc )
     m_mergeCell = new KAction( i18n("Merge cells"),"mergecell" ,0, this, SLOT( mergeCell() ), actionCollection(), "mergecell" );
     m_dissociateCell = new KAction( i18n("Dissociate cells"),"dissociatecell" ,0, this, SLOT( dissociateCell() ), actionCollection(), "dissociatecell" );
 
+    m_increaseIndent = new KAction( i18n("Increase indent"),"increaseindent" ,0, this, SLOT( increaseIndent() ), actionCollection(), "increaseindent" );
+    m_decreaseIndent = new KAction( i18n("Decrease indent"),"decreaseindent" ,0, this, SLOT( decreaseIndent() ), actionCollection(),"decreaseindent");
+
     m_multiRow = new KToggleAction( i18n("Multi Row"), "multirow", 0, actionCollection(), "multiRow" );
     connect( m_multiRow, SIGNAL( toggled( bool ) ), this, SLOT( multiRow( bool ) ) );
     m_selectFont = new KFontAction( i18n("Select Font"), 0, actionCollection(), "selectFont" );
@@ -1423,12 +1426,6 @@ void KSpreadView::removeComment()
   updateEditWidget();
 }
 
-/*void KSpreadView::showComment()
-{
-  if ( !m_pTable )
-        return;
-  m_pCanvas->showComment();
-}*/
 
 void KSpreadView::changeAngle()
 {
@@ -1463,6 +1460,21 @@ void KSpreadView::dissociateCell()
     if ( !m_pTable )
         return;
     m_pTable->dissociateCell( QPoint( m_pCanvas->markerColumn(), m_pCanvas->markerRow() ) );
+}
+
+
+void KSpreadView::increaseIndent()
+{
+  if ( !m_pTable )
+        return;
+  m_pTable->increaseIndent( QPoint( m_pCanvas->markerColumn(), m_pCanvas->markerRow() ) );
+}
+
+void KSpreadView::decreaseIndent()
+{
+  if ( !m_pTable )
+        return;
+  m_pTable->decreaseIndent( QPoint( m_pCanvas->markerColumn(), m_pCanvas->markerRow() ) );
 }
 
 void KSpreadView::consolidate()
